SERVER-26250 extend moveChunk command success to depend on migration document removal success